# io-self

./: Cargo.toml  LICENSE
io_self_derive/: Cargo.toml
io_self_derive/src/: attr.rs  lib.rs  read.rs  util.rs  write.rs
io_self_derive/tests/: 01-derive-empty.rs  02-simple.rs  03-array.rs  04-simple-endian.rs  05-array-endian.rs  06-tagged-enum.rs  07-length-prefix.rs  08-prefixed-vec.rs  09-field-specific-parsers.rs
src/: derive_util.rs  grammar.rs  helper.rs  lib.rs  positional.rs
