[package]
name = "io_self"
version = "0.1.0"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>"]
edition = "2021"
description = "A simple system for encoding/decoding binary data based on a predefined format"
license = "MIT"
repository = "https://github.com/jmeggitt/io-self"
keywords = ["endian"]
categories = ["encoding"]
readme = "readme.md"

[features]
default = []
big-endian = []



[dependencies]
byteorder = "1.4.3"
smallvec = "1.8.0"
#bstr = "0.2.17"
#prost = "0.10.1"

#[dependencies.rend]
#version = "0.3.6"
#optional = true

#[dependencies.bytecodec]
#version = "0.4.15"

[dependencies.packed_struct]
version = "0.10.0"
optional = true
