[package]
name = "io_self"
version = "0.1.0"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>"]
edition = "2021"
description = "A simple system for encoding/decoding binary data based on a predefined format"
license = "MIT"
repository = "https://github.com/jmeggitt/io-self"
keywords = ["endian"]
categories = ["encoding"]
readme = "readme.md"

[features]
default = []

[dependencies]
byteorder = "1.4.3"
smallvec = "1.8.0"
