[package]
name = "io_self_derive"
version = "0.3.0"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>"]
edition = "2021"
description = "Derive macros for the io_self crate."
license = "MIT"
repository = "https://github.com/jmeggitt/io-self"
readme = "../readme.md"

[lib]
proc-macro = true

[dependencies]
darling = "0.14"
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"


[dev-dependencies]
trybuild = "1.0"
io_self = {path = ".."}
